--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -22,11 +22,11 @@
             <h4>Nairobi/Mombasa...</h4>
             <ul class="popover">
                 <li><h2>Nairobi:</h2></li>
-                <li>Upper Hill</li>
-                <li>Nairobi City</li>
+                <li>Crown Hill</li>
+                <li>Iyana Ipaja</li>
                 <li><h2>Mombasa:</h2></li>
-                <li>Nyali Beach</li>
-                <li>Mombasa City</li>
+                <li>Goog God shortlet</li>
+                <li>Lekki Pennisula</li>
             </ul>
         </div>
         <div class="amenities">
@@ -90,12 +90,12 @@
                 <h2>2 Reviews</h2>
                 <ul>
                     <li>
-                        <h3>From Ben Jamea the 27th July 2022</h3>
+                        <h3>From Ekpah Joseph, 20th August 2023</h3>
                         <p>John is an epic host. Nothing more I can say, 5 stars!</p>
                     </li>
                     <li>
-                        <h3>From Sam Too the 5th January 2022</h3>
-                        <p>Highly recommended!</p>
+                        <h3>From Alex Edeh Too the 12th September 2023</h3>
+                        <p>I highly recommend this place!</p>
                     </li>
                 </ul>
             </div>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="user">
-                <p><b>Owner</b>: Grace</p>
+                <p><b>Owner</b>: Echono Blessing</p>
             </div>
             <div class="description">
                 <p>Our place is a private, affordable stand-alone guest house centrally located just minutes to Iyana Ipaja Junction. The guest house is a quaint, 400 square ft. with a full bath, mini kitchen and living room. The extra high ceilings make the home feel more spacious. The sofa converts to a bed also. We have a handmade counter area that adds character to the room and a great porch/deck to relax on and have a glass of Merlot.
