HTML page that displays a header, footer, a filters box with dropdown and results.

--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -19,13 +19,13 @@
     <section class="filters">
         <div class="locations">
             <h3>States</h3>
-            <h4>Nairobi/Mombasa...</h4>
+            <h4>Lagos/Lagos...</h4>
             <ul class="popover">
-                <li><h2>Nairobi:</h2></li>
+                <li><h2>Ikeja:</h2></li>
                 <li>Crown Hill</li>
                 <li>Iyana Ipaja</li>
-                <li><h2>Mombasa:</h2></li>
-                <li>Goog God shortlet</li>
+                <li><h2>Iyana Ipaja:</h2></li>
+                <li>Good God shortlet</li>
                 <li>Lekki Pennisula</li>
             </ul>
         </div>
@@ -45,7 +45,7 @@
     <section class="places">
         <h1>Places</h1>
         <article>
-            <h2>My Home</h2>
+            <h2>Home for all</h2>
             <div class="price_by_night">
                 <p>100,000 naira
             </div>
@@ -94,16 +94,16 @@
                         <p>John is an epic host. Nothing more I can say, 5 stars!</p>
                     </li>
                     <li>
-                        <h3>From Alex Edeh Too the 12th September 2023</h3>
+                        <h3>From Alex Edeh, 12th September 2023</h3>
                         <p>I highly recommend this place!</p>
                     </li>
                 </ul>
             </div>
         </article>
         <article>
-            <h2>My Apartment</h2>
+            <h2>Idan Guest House</h2>
             <div class="price_by_night">
-                <p>$65
+                <p>150,000 Naira
             </div>
             <div class="information">
                 <div class="max_guest">
@@ -138,14 +138,14 @@
                 <h2>1 Review</h2>
                 <ul>
                     <li>
-                        <h3>From Lenny the 15th August 2022</h3>
+                        <h3>From Joshua, 15th September 2023</h3>
                         <p>Fantastic place. It was clean, Rose the customer care agent was great (even though we didn't meet in person) and everything went super smooth. Location is also great if you like running and something a bit more quiet.</p>
                     </li>
                 </ul>
             </div>
         </article>
         <article>
-            <h2>A Suite</h2>
+            <h2>God is Good Suite</h2>
             <div class="price_by_night">
                 <p>200,000 Naira
             </div>
@@ -182,11 +182,11 @@
                 <h2>2 Reviews</h2>
                 <ul>
                     <li>
-                        <h3>From Ronny the 7th June 2022</h3>
+                        <h3>From Emmanuel,9th February 2023</h3>
                         <p>Super charming place in a cool neighborhood! The apartment is very clean and spacious. Highly recommend!</p>
                     </li>
                     <li>
-                        <h3>From Shaddy the 25th May 2022</h3>
+                        <h3>From Anita the 30th May 2023</h3>
                         <p>Victor was very sweet when he welcomed us and made sure we felt as comfortable as possible. The location is ideal for visiting the city and use transportation.</p>
                     </li>
                 </ul>
