HTML page that displays a header, footer, a filters box with dropdown and results.

--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -182,11 +182,11 @@
                 <h2>2 Reviews</h2>
                 <ul>
                     <li>
-                        <h3>From Emmanuel,9th February 2023</h3>
+                        <h3>From Emmanuel, 9th February 2023</h3>
                         <p>Super charming place in a cool neighborhood! The apartment is very clean and spacious. Highly recommend!</p>
                     </li>
                     <li>
-                        <h3>From Anita the 30th May 2023</h3>
+                        <h3>From Anita, 30th May 2023</h3>
                         <p>Victor was very sweet when he welcomed us and made sure we felt as comfortable as possible. The location is ideal for visiting the city and use transportation.</p>
                     </li>
                 </ul>
